--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <div class="header-top">
           <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
+              <a class="navbar-brand" href="#">Navbar</a>
               <button
                 class="navbar-toggler"
                 type="button"
@@ -189,42 +190,42 @@
           </p>
           <div class="our-clients-link">
             <div class="row">
-              <div class="col-xxl-3">
+              <div class="col-xxl-3 col-xl-3">
                 <a href="" class="our-clients-link-item">
                   <img src="./assets/img/public/travel.png" alt="" />
                 </a>
               </div>
-              <div class="col-xxl-3">
+              <div class="col-xxl-3 col-xl-3">
                 <a href="" class="our-clients-link-item">
                   <img src="./assets/img/public/life.png" alt="" />
                 </a>
               </div>
-              <div class="col-xxl-3">
+              <div class="col-xxl-3 col-xl-3">
                 <a href="" class="our-clients-link-item">
                   <img src="./assets/img/public/fitness.png" alt="" />
                 </a>
               </div>
-              <div class="col-xxl-3">
+              <div class="col-xxl-3 col-xl-3">
                 <a href="" class="our-clients-link-item">
                   <img src="./assets/img/public/smile.png" alt="" />
                 </a>
               </div>
-              <div class="col-xxl-3">
+              <div class="col-xxl-3 col-xl-3">
                 <a href="" class="our-clients-link-item">
                   <img src="./assets/img/public/smile.png" alt="" />
                 </a>
               </div>
-              <div class="col-xxl-3">
+              <div class="col-xxl-3 col-xl-3">
                 <a href="" class="our-clients-link-item">
                   <img src="./assets/img/public/fitness.png" alt="" />
                 </a>
               </div>
-              <div class="col-xxl-3">
+              <div class="col-xxl-3 col-xl-3">
                 <a href="" class="our-clients-link-item">
                   <img src="./assets/img/public/life.png" alt="" />
                 </a>
               </div>
-              <div class="col-xxl-3">
+              <div class="col-xxl-3 col-xl-3">
                 <a href="" class="our-clients-link-item">
                   <img src="./assets/img/public/travel.png" alt="" />
                 </a>
@@ -242,7 +243,7 @@
           <div class="owl-carousel owl-theme">
             <div class="item">
               <div class="row">
-                <div class="col-xxl-6">
+                <div class="col-xxl-6 col-xl-6 col-lg-6">
                   <div class="testimonials-profile-item">
                     <p class="testimonials-profile-item-header">
                       our company, we do ongoing research with our target audience. This includes 30-45 minute phone
@@ -255,7 +256,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xxl-6">
+                <div class="col-xxl-6 col-xl-6 col-lg-6">
                   <div class="testimonials-profile-item">
                     <p class="testimonials-profile-item-header">
                       our company, we do ongoing research with our target audience. This includes 30-45 minute phone
@@ -268,7 +269,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xxl-6">
+                <div class="col-xxl-6 col-xl-6 col-lg-6">
                   <div class="testimonials-profile-item">
                     <p class="testimonials-profile-item-header">
                       our company, we do ongoing research with our target audience. This includes 30-45 minute phone
@@ -281,7 +282,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xxl-6">
+                <div class="col-xxl-6 col-xl-6 col-lg-6">
                   <div class="testimonials-profile-item">
                     <p class="testimonials-profile-item-header">
                       our company, we do ongoing research with our target audience. This includes 30-45 minute phone
@@ -298,7 +299,7 @@
             </div>
             <div class="item">
               <div class="row">
-                <div class="col-xxl-6">
+                <div class="col-xxl-6 col-xl-6 col-lg-6">
                   <div class="testimonials-profile-item">
                     <p class="testimonials-profile-item-header">
                       our company, we do ongoing research with our target audience. This includes 30-45 minute phone
@@ -311,7 +312,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xxl-6">
+                <div class="col-xxl-6 col-xl-6 col-lg-6">
                   <div class="testimonials-profile-item">
                     <p class="testimonials-profile-item-header">
                       our company, we do ongoing research with our target audience. This includes 30-45 minute phone
@@ -324,7 +325,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xxl-6">
+                <div class="col-xxl-6 col-xl-6 col-lg-6">
                   <div class="testimonials-profile-item">
                     <p class="testimonials-profile-item-header">
                       our company, we do ongoing research with our target audience. This includes 30-45 minute phone
@@ -337,7 +338,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xxl-6">
+                <div class="col-xxl-6 col-xl-6 col-lg-6">
                   <div class="testimonials-profile-item">
                     <p class="testimonials-profile-item-header">
                       our company, we do ongoing research with our target audience. This includes 30-45 minute phone
